# gradingProject

./: .dockerignore  .env.bak  .env.example  .gitignore  .htaccess  00_START_HERE.md  ADVANCED_ML_TASKS.md  AGENTS.md  CANVAS_METRICS_API.md  CANVAS_MONITORING_COMPLETE.md  CANVAS_MONITORING_FINAL_REPORT.md  CANVAS_MONITORING_INDEX.md  CANVAS_MONITORING_INTEGRATION.md  CANVAS_PERFORMANCE_TESTING.md  CANVAS_SYNC_INTEGRATION.md  CANVAS_SYNC_LOGGING.md  CANVAS_SYNC_LOGGING_ENHANCEMENTS.md  CANVAS_SYNC_LOGGING_QUICK_START.md  CANVAS_SYNC_OPTIMIZATIONS.md  CANVAS_TOKEN_FIX.md  COMPLETE_FIX_SUMMARY.md  COMPLETE_SETUP_SUMMARY.txt  CSRF_TOKEN_FIX.md  DEPENDENCIES_GUIDE.md  DEPLOYMENT_SUMMARY.md  DOCKER_LOGS_VOLUME_MAPPING.md  DOCKER_README.md  Dockerfile  Dockerfile.render  EXTRA_CREDIT_IMPLEMENTATION.md  FIX_METADATA_COLUMN.md  GITHUB_PUSH_GUIDE.md  GITHUB_SCRIPTS_README.md  LOG_RETRIEVAL_QUICK_REFERENCE.md  MIGRATION_SUMMARY.md  PASSENGER_WSGI_FIX.md  QUICK_REFERENCE.md  README.md  README_SECURITY.md  RENDER_BUILD_GUIDE.md  (+87 more)
.pyscn/reports/: analyze_20251008_113418.html  analyze_20251008_115503.html
app/: .pyscn.toml  __init__.py  error_handlers.py  google_auth.py  google_tasks_sync.py  import_assignments.py  logging_config.py  models.py  redis_config.py  routes.py  routes_enhanced.py  sync_commands.py  term_date_calculator.py  utils.py
app/tasks/: exports.py  (+6 more)
instance/: google_credentials.json
migrations/: add_analytics_system.py  add_assignment_triggers.py  add_canvas_fields.py  add_canvas_sync_metrics.py  add_is_missing_field.py  add_is_submitted_field.py  add_sync_status_fields.py  migrate_to_mysql.py
static/: manifest.json
tests/: test_assignments.py  test_categories.py  test_import_assignments.py
(+68 files in other folders)
